2007-10-23  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_changed): don't update a connection
			and send out the updated signal unless the connection is really
			updated

2007-10-23  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (match_cipher, security_compatible): remove, use
			nm_utils_ap_security_compatible() from libnm-util
		- (nm_ap_check_compatible): check BSSID too
		- (save_secrets_to_keyring): remove
		- (get_secrets_dialog_response_cb): save entire connection to GConf
			rather than just saving secrets, allows the user to change security
			settings for APs for which NM can't determine the security
			(LEAP and Dynamic WEP) and also switch EAP methods correctly

2007-10-23  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
	  src/applet-dbus-settings.h
		- (applet_dbus_settings_get_by_connection): new function; return the
			AppletDbusConnectionSettings object that wraps an NMConnection

2007-10-22  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
	  src/wireless-security/ws-dynamic-wep.c
	  src/wireless-security/ws-dynamic-wep.h
	  src/wireless-security/Makefile.am
	  src/wireless-dialog.c
		- Add Dynamic WEP authentication option

2007-10-22  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wpa-eap.c
		- Use generic 802.1x methods from wireless-security.c

2007-10-22  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
		- (ws_802_1x_auth_combo_init, ws_802_1x_auth_combo_changed,
		   ws_802_1x_validate, ws_802_1x_add_to_size_group,
		   ws_802_1x_fill_connection): genericize 802.1x-related methods so that
			both WPA-EAP and Dynamic WEP can use them

2007-10-21  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (other_wireless_response_cb): do something with the connection the
			user specified in the other wireless network dialog

2007-10-19  Dan Williams  <dcbw@redhat.com>
